# instanceviewer

./: .gitmodules  BuildScene.hpp  CMakeLists.txt  Instance.hpp  InstanceViewer.cpp  LICENSE  Pathtracer.hpp  README.md  kd_tree.h  svt.h
res/: pic1-camera.txt  pic2-camera.txt  pic3-camera.txt  pic4-camera.txt  pic5-camera.txt
scripts/: moana.sh  viewer-camera.txt
